force-app/main/default/objects/Special_character_batch_MTD__mdt/Special_character_batch_MTD__mdt.object-meta.xml
<CustomObject>
    <label>Special character batch MTD</label>
    <pluralLabel>Special character batch MTDS</pluralLabel>
</CustomObject>