force-app/main/default/objects/Special_character_batch_MTD__mdt/fields/Itag_value__c.field-meta.xml
<CustomField>
    <fullName>Itag_value__c</fullName>
    <label>Itag value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>