force-app/main/default/objects/Special_character_batch_MTD__mdt/fields/Itag_value_long__c.field-meta.xml
<CustomField>
    <fullName>Itag_value_long__c</fullName>
    <label>Itag value long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>