force-app/main/default/objects/Special_character_batch_MTD__mdt/fields/Object_value__c.field-meta.xml
<CustomField>
    <fullName>Object_value__c</fullName>
    <label>Object value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>